--- a/src/main/resources/templates/Company/thongtinthanhtoan.html
+++ b/src/main/resources/templates/Company/thongtinthanhtoan.html
@@ -121,7 +121,7 @@
 					</a>
 				</li>
 				<li class="sidebar-item">
-					<a class="sidebar-link" href="lichsumuahang.html">
+					<a class="sidebar-link" href="hosodaluu.html">
 						<i class="align-middle" data-feather="package"></i>
 						<span>Lịch sử đơn hàng</span>
 					</a>
