--- a/src/main/resources/templates/Company/Danhsachtindang.html
+++ b/src/main/resources/templates/Company/Danhsachtindang.html
@@ -163,7 +163,7 @@
 				  </a>
 				</li>
 				<li class="sidebar-item">
-				  <a class="sidebar-link" href="lichsumuahang.html">
+				  <a class="sidebar-link" href="hosodaluu.html">
 					<i class="align-middle" data-feather="package"></i>
 					<span>Lịch sử đơn hàng</span>
 				  </a>
