--- a/src/main/resources/templates/Company/Taotintuyendung.html
+++ b/src/main/resources/templates/Company/Taotintuyendung.html
@@ -215,7 +215,7 @@
         </li>
 
         <li class="sidebar-item mt-4">
-          <a href="#" class="btn btn-primary w-100">
+          <a href="http://localhost:8080" class="btn btn-primary w-100">
             <span>Cổng người tìm việc</span>
             <span class="ms-2">Chuyển</span>
           </a>
