--- a/src/main/resources/templates/fragments/job-single.html
+++ b/src/main/resources/templates/fragments/job-single.html
@@ -49,9 +49,18 @@
       }
 
       #userInfo {
-        display: none; /* Ẩn thông tin người dùng trên thiết bị nhỏ */
+        display: none;
         align-items: center; /* Căn giữa các phần tử trong userInfo */
         margin-left: auto; /* Đẩy toàn bộ userInfo sang bên phải */
+      }
+      #userInfo1 {
+        display: none;
+
+      }
+
+      #userInfo2 {
+        display: none;
+
       }
 
       #username {
@@ -82,6 +91,19 @@
         display: none;
       }
 
+      #userInfo:hover #dropdownMenu {
+        display: block; /* Hiện dropdown menu khi hover vào userInfo */
+      }
+
+
+      #userInfo #dropdownMenu a{
+        text-decoration: none;
+      }
+
+      #tuyendung:hover{
+        opacity: 0.5;
+      }
+
     </style>
 
     <script>
@@ -98,16 +120,53 @@
           // Kiểm tra avatar và gán giá trị
           // const avatarSrc = user.avatar ? user.avatar : defaultAvatar;
           // document.getElementById('userAvatar').src = avatarSrc;
-          document.getElementById('username').textContent = user.userInfo.fullName; // Giả sử username là thuộc tính trong user
-          console.log(user.userInfo.fullName);
+          document.getElementById('username1').textContent = user.userInfo.firstName;
+          document.getElementById('username').textContent = user.userInfo.firstName;// Giả sử username là thuộc tính trong user
+          console.log(user.userInfo.firstName);
           document.getElementById('authButtons').style.display = 'none';
-          document.getElementById('userInfo').style.display = 'flex'; // Hoặc 'block' tùy thuộc vào layout
+          // document.getElementById('loginBtn1').style.display = 'none';
+          // document.getElementById('signupBtn1').style.display = 'none';
+          document.getElementById('userInfo').style.display = 'flex';
+          // document.getElementById('username1').style.display = 'flex'; // Hoặc 'block' tùy thuộc vào layout
         } else {
           // Nếu không có thông tin người dùng, đảm bảo rằng các nút vẫn hiển thị
-          document.getElementById('authButtons').style.display = 'flex';
-          document.getElementById('userInfo').style.display = 'none'; // Hoặc 'block' tùy thuộc vào layout
+          document.getElementById('authButtons').style.display = 'block';
+          // document.getElementById('loginBtn1').style.display = 'block';
+          // document.getElementById('signupBtn1').style.display = 'block';
+          document.getElementById('userInfo').style.display = 'none';
+          // document.getElementById('userInfo1').style.display = 'none';
+          // document.getElementById('userInfo2').style.display = 'none';// Hoặc 'block' tùy thuộc vào layout
         }
       });
+
+      // Hàm để kiểm tra kích thước cửa sổ
+      function checkWindowSize() {
+        const userInfo1 = document.getElementById('userInfo1');
+        const userInfo2 = document.getElementById('userInfo2');
+        const userInfo = document.getElementById('userInfo'); // Nếu bạn vẫn cần kiểm tra userInfo
+        const userlogin = localStorage.getItem('userInfo');
+        const btnSignup = document.getElementById('signupBtn1');
+        const btnLogin = document.getElementById('loginBtn1');
+        if(userlogin) {
+          if (window.innerWidth < 768) { // Ngưỡng cho thiết bị di động
+            userInfo1.style.display = 'block'; // Hiện userInfo1
+            userInfo2.style.display = 'block'; // Hiện userInfo2
+            userInfo.style.display = 'none'; // Ẩn userInfo
+            btnSignup.style.display = 'none';
+            btnLogin.style.display = 'none'
+          } else {
+            userInfo1.style.display = 'none'; // Ẩn userInfo1
+            userInfo2.style.display = 'none'; // Ẩn userInfo2
+            userInfo.style.display = 'flex'; // Hiện userInfo
+          }
+        }
+      }
+
+      // Kiểm tra kích thước cửa sổ khi tải trang
+      window.onload = checkWindowSize;
+
+      // Kiểm tra kích thước cửa sổ khi thay đổi kích thước
+      window.onresize = checkWindowSize;
 
       function checkActivity() {
         let data;
@@ -184,6 +243,30 @@
                 </ul>
               </li>
               <li><a href="contact.html">Liên Hệ</a></li>
+              <li id="signupBtn1" class="d-lg-none"><a><span class="mr-2 icon-add"></span>Đăng Kí</a></li>
+              <li id="loginBtn1" class="d-lg-none"><a><span class="mr-2 icon-lock_outline">Đăng Nhập</a></li>
+              <li class="has-children" id="userInfo2" >
+
+                <a id="username1" class="text-lg font-semibold flex items-center">
+                  <img src="/img/avatars/avatar-2.jpg" alt="User  Image" class="w-8 h-8 rounded-full mr-2" style="width: 32px; height: 32px;"> <!-- Hình ảnh người dùng -->
+                  Lê
+                </a>
+                <!-- Dropdown menu -->
+                <ul id="dropdownMenu1" class="dropdown">
+                  <li> <a href=""  id="dashboard1">Tài khoản</a></li>
+                  <li> <a href=""  id="logoutBtn1">Đăng xuất</a></li>
+                </ul>
+              </li>
+              <li id="userInfo1">
+
+                <a id="tuyendung1" class="text-lg font-semibold">
+                  <div class="text-xs">DÀNH CHO</div>
+                  <!--                                    <i class="fas fa-briefcase text-blue-400"></i>-->
+                  <p class="text-lg font-semibold">Nhà Tuyển Dụng</p>
+                  <div class="text-xs">Đăng tin miễn phí</div>
+                </a>
+
+              </li>
             </ul>
           </nav>
           
@@ -197,19 +280,13 @@
               </button>
             </div>
 
-            <div id="userInfo" class="flex items-center p-4" style="display: flex; position: relative;">
-              <!-- Notification Bell -->
-              <!--                            <div class="relative">-->
-              <!--                                <i class="fas fa-bell text-white text-xl"></i>-->
-              <!--                                <button class="absolute top-0 right-0 bg-red-600 text-white text-xs rounded-full px-1">1</button>-->
-              <!--                            </div>-->
-              <!-- User Icon -->
-              <div class="ml-4">
-                <div class="w-8 h-8 bg-white rounded-full flex items-center justify-center">
-                  <i class="fas fa-user text-purple-800"></i>
-                </div>
+            <div id="userInfo" class="flex items-center p-4">
+              <div id="avt" class="ml-4">
+                <img src="/img/avatars/avatar-2.jpg" class="w-8 h-8 bg-white rounded-full flex items-center justify-center">
+
               </div>
-              <div class="ml-2 text-white flex items-center relative">
+
+              <div id="name" class="ml-2 text-white flex items-center relative">
                 <span id="username" class="cursor-pointer truncate" style="max-width: 100px;">Lê</span>
                 <i class="fas fa-caret-down ml-1"></i>
 
@@ -220,12 +297,13 @@
                   <a href="#" class="block px-4 py-2 hover:bg-gray-200" id="logoutBtn">Đăng xuất</a>
                 </div>
               </div>
+
               <!-- Divider -->
               <div class="ml-4 border-l border-white h-6"></div>
               <!-- Employer Section -->
-              <div class="ml-4 text-white flex items-center">
+              <div id="tuyendung" class="ml-4 text-white flex items-center">
                 <i class="fas fa-briefcase text-blue-400"></i>
-                <div id="tuyendung" class="ml-2">
+                <div  class="ml-2">
                   <div class="text-xs">DÀNH CHO</div>
                   <div class="text-lg font-semibold">Nhà Tuyển Dụng</div>
                   <div class="text-xs">Đăng tin miễn phí</div>
@@ -247,8 +325,8 @@
           <div class="col-md-7">
             <h2 th:text="${jobPost.getJobTitle()}" class="text-white font-weight-bold">Tên công việc</h2>
             <div class="custom-breadcrumbs">
-              <a href="#">Home</a> <span class="mx-2 slash">/</span>
-              <a href="#">Job</a> <span class="mx-2 slash">/</span>
+              <a href="http://localhost:8080">Trang chủ</a> <span class="mx-2 slash">/</span>
+<!--              <a href="#">Việc làm</a> <span class="mx-2 slash">/</span>-->
               <span class="text-white"><strong th:text="${jobPost.getJobTitle()}">Product Designer</strong></span>
             </div>
           </div>
@@ -439,31 +517,31 @@
           </div>
           <div class="col-lg-4">
             <div class="bg-light p-3 border rounded mb-4">
-              <h3 class="text-primary  mt-3 h5 pl-3 mb-3 ">Job Summary</h3>
+              <h3 class="text-primary  mt-3 h5 pl-3 mb-3 ">Tóm Tắt Công Việc</h3>
               <ul class="list-unstyled pl-3 mb-0">
-                <li class="mb-2"><strong class="text-black">Published on:</strong> <span th:text="${jobPost.getCreateDate()}"></span></li>
+                <li class="mb-2"><strong class="text-black">Ngày Đăng:</strong> <span th:text="${jobPost.getCreateDate()}"></span></li>
                 <li class="mb-2">
-                  <strong class="text-black">Vacancy:</strong>
+                  <strong class="text-black">Tuyển Số Lượng:</strong>
                   <span th:text="${jobPost.getQuantity()}"></span>
                 </li>
                 <li class="mb-2">
-                  <strong class="text-black">Employment Status:</strong>
+                  <strong class="text-black">Hình Thức Làm Việc:</strong>
                   <span th:text="${jobPost.workType}">Full-time</span>
                 </li>
                 <li class="mb-2">
-                  <strong class="text-black">Experience:</strong>
+                  <strong class="text-black">Kinh Nghiệm:</strong>
                   <span th:text="${jobPost.getExp()}">2 to 3 year(s)</span>
                 </li>
                 <li class="mb-2">
-                  <strong class="text-black">Job Location:</strong>
+                  <strong class="text-black">Địa Điểm:</strong>
                   <span th:text="${jobPost.getCity()}">New York City</span>
                 </li>
                 <li class="mb-2">
-                  <strong class="text-black">Salary:</strong>
+                  <strong class="text-black">Mức Lương:</strong>
                   <span th:text="${jobPost.getMinSalary() + ' - ' + jobPost.getMaxSalary()}">$60k - $100k</span>
                 </li>
                 <li class="mb-2">
-                  <strong class="text-black">Application Deadline:</strong>
+                  <strong class="text-black">Hạn Nộp:</strong>
                   <span th:text="${jobPost.getEndDate()}">April 28, 2019</span>
                 </li>
               </ul>
@@ -489,7 +567,7 @@
 
         <div class="row mb-5 justify-content-center">
           <div class="col-md-7 text-center">
-            <h2 class="section-title mb-2">22,392 Related Jobs</h2>
+            <h2 class="section-title mb-2" th:text="${jobListings.getTotalElements()} + ' Việc Làm Gợi Ý'">22,392 Related Jobs</h2>
           </div>
         </div>
 
@@ -497,9 +575,9 @@
           <li class="job-listing d-block d-sm-flex pb-3 pb-sm-0 align-items-center">
             <a th:href="@{/job-posts/detail/{id}(id=${job.id})}" ></a>
             <div class="job-listing-logo">
-              <img th:src="${job.companyLogoUrl != null ? job.companyLogoUrl : '/Admin/images/job_logo_5.jpg'}"
-                   alt="Logo của công ty"
-                   class="img-fluid">
+              <img th:src="${job?.companyLogoUrl != null && !#strings.isEmpty(job.companyLogoUrl)
+? '/uploads/logocompany/' + job.companyLogoUrl
+: '/Admin/images/person_3.jpg'}" class="img-fluid">
             </div>
 
             <div class="job-listing-about d-sm-flex custom-width w-100 justify-content-between mx-4">
@@ -524,18 +602,24 @@
 
         <div class="row pagination-wrap">
           <div class="col-md-6 text-center text-md-left mb-4 mb-md-0">
-            <span>Showing 1-7 Of 22,392 Jobs</span>
+            <span th:text="'Hiển thị 1-' + ${totalPages} +' của ' + ${jobListings.getTotalElements()} + ' Việc làm'">Showing 1-7 Of 43,167 Jobs</span>
           </div>
           <div class="col-md-6 text-center text-md-right">
             <div class="custom-pagination ml-auto">
-              <a href="#" class="prev">Prev</a>
+              <a th:href="${currentPage == 1} ? '#' : @{/job-posts/detail/{id}(id=${jobPost.id},status='ACTIVE', pageNo=${i}, pageSize=5)}"
+                 class="prev"
+                 th:classappend="${currentPage == 1} ? 'disabled'">Prev</a>
               <div class="d-inline-block">
-              <a href="#" class="active">1</a>
-              <a href="#">2</a>
-              <a href="#">3</a>
-              <a href="#">4</a>
+                <span th:each="i : ${#numbers.sequence(1, totalPages)}">
+                    <a th:href="@{/job-posts/detail/{id}(id=${jobPost.id},status='ACTIVE', pageNo=${i}, pageSize=5)}"
+                       th:classappend="${i == currentPage} ? 'active'">
+                        <span th:text="${i}"></span>
+                    </a>
+                </span>
               </div>
-              <a href="#" class="next">Next</a>
+              <a th:href="${currentPage == totalPages} ? '#' : @{/job-posts/detail/{id}(id=${jobPost.id},status='ACTIVE', pageNo=${i}, pageSize=5)}"
+                 class="next"
+                 th:classappend="${currentPage == totalPages} ? 'disabled'">Next</a>
             </div>
           </div>
         </div>
@@ -649,7 +733,7 @@
           <div class="col-12">
             <p class="copyright"><small>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >DreamJob</a>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></small></p>
           </div>
         </div>
@@ -753,8 +837,8 @@
 <script>
   document.addEventListener('DOMContentLoaded', () => {
     console.log('DOM fully loaded and parsed'); // Thông báo khi DOM đã được tải xong
-    const username = document.getElementById('username');
-    const dropdownMenu = document.getElementById('dropdownMenu');
+    const username = document.getElementById('username1');
+    const dropdownMenu = document.getElementById('dropdownMenu1');
 
     username.addEventListener('click', (event) => {
       event.stopPropagation(); // Ngăn chặn sự kiện click lan truyền
@@ -764,18 +848,24 @@
     document.addEventListener('click', () => {
       dropdownMenu.style.display = 'none'; // Ẩn menu khi nhấp ra ngoài
     });
-
   });
 
   // Thêm sự kiện cho nút đăng xuất
   document.getElementById('logoutBtn').addEventListener('click', function () {
     // Xóa thông tin người dùng khỏi localStorage
     localStorage.removeItem('userInfo');
-    // Cập nhật giao diện người dùng
-    document.getElementById('authButtons').style.display = 'block';
-    document.getElementById('userInfo').style.display = 'none';
-    console.log("User  logged out.");
-    window.location.href = "http://localhost:8080";
+    if(localStorage.getItem('userInfo')){
+      // Cập nhật giao diện người dùng
+      document.getElementById('authButtons').style.display = 'none';
+      document.getElementById('userInfo1').style.display = 'none';
+      document.getElementById('userInfo2').style.display = 'none';
+      document.getElementById('userInfo').style.display = 'flex';
+    }else {
+      document.getElementById('authButtons').style.display = 'none';
+      document.getElementById('userInfo').style.display = 'none';
+      console.log("User  logged out.");
+      window.location.href = "http://localhost:8080";
+    }
   });
 
   document.getElementById('dashboard').addEventListener('click', function () {
@@ -785,13 +875,29 @@
 
   // Thêm sự kiện cho nút đăng xuất
   document.getElementById('tuyendung').addEventListener('click', function () {
-    // Xóa thông tin người dùng khỏi localStorage
-    localStorage.removeItem('userInfo');
-    // Cập nhật giao diện người dùng
-    document.getElementById('authButtons').style.display = 'block';
-    document.getElementById('userInfo').style.display = 'none';
-    console.log("User  logged out.");
-    window.location.href = '/auth/login';
+    const getUserInfo = localStorage.getItem("userInfo")
+    if (getUserInfo) {
+      const userInfo = JSON.parse(getUserInfo);
+      const userRole = userInfo.userInfo.roles;
+      console.log(userRole);
+      console.log(userInfo);
+
+      if (userRole[0] === "ROLE_COMPANY" || userRole[0] === "ROLE_ADMIN") {
+
+        window.location.href = '/job-posts/create';
+      } else {
+        // Xóa thông tin người dùng khỏi localStorage
+        localStorage.removeItem('userInfo');
+        // Cập nhật giao diện người dùng
+        document.getElementById('loginBtn1').style.display = 'block';
+        document.getElementById('signupBtn1').style.display = 'block';
+        // document.getElementById('username1').style.display = 'none';
+        document.getElementById('userInfo').style.display = 'none';
+        console.log("User  logged out.");
+        window.location.href = '/auth/login';
+      }
+    }
+
   });
 </script>
 
@@ -816,7 +922,7 @@
 
     if (!user) {
       // Nếu không có người dùng, hiển thị thông báo và chuyển hướng đến trang đăng nhập
-      alert("Bạn cần đăng nhập để nộp hồ sơ. Vui lòng đăng nhập trước.");
+      swal("Bạn cần đăng nhập để nộp hồ sơ!", "Chuyển đến trang đăng nhập?", "error");
       window.location.href = '/auth/login'; // Thay đổi đường dẫn đến trang đăng nhập của bạn
     }
   }
